examples/good/normalize.arvo
def zero : nat := O.
check zero.
simpl zero.
simpl (\x : nat. zero).

