examples/bad/subst.arvo
check ( ( \ x : Type . \ y : Type . (x x) ) y).
